--- a/qtfuzzylite/ui/Window.ui
+++ b/qtfuzzylite/ui/Window.ui
@@ -71,25 +71,34 @@
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <property name="spacing">
-         <number>0</number>
+         <number>6</number>
         </property>
         <property name="leftMargin">
-         <number>3</number>
+         <number>9</number>
         </property>
         <property name="topMargin">
-         <number>0</number>
+         <number>6</number>
         </property>
         <property name="rightMargin">
-         <number>3</number>
+         <number>9</number>
         </property>
         <property name="bottomMargin">
-         <number>0</number>
+         <number>3</number>
         </property>
         <item>
-         <widget class="QGroupBox" name="groupBox1">
+         <widget class="QFrame" name="frame_2">
+          <property name="frameShape">
+           <enum>QFrame::Box</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Sunken</enum>
+          </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
-           <property name="margin">
+           <property name="spacing">
             <number>6</number>
+           </property>
+           <property name="margin">
+            <number>9</number>
            </property>
            <item>
             <widget class="QSplitter" name="spl_VarsRules">
@@ -450,33 +459,30 @@
        <attribute name="label">
         <string>Control</string>
        </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_6">
-        <property name="spacing">
-         <number>0</number>
-        </property>
+       <layout class="QVBoxLayout" name="verticalLayout_13">
         <property name="leftMargin">
-         <number>3</number>
+         <number>9</number>
         </property>
         <property name="topMargin">
-         <number>0</number>
+         <number>6</number>
         </property>
         <property name="rightMargin">
-         <number>3</number>
+         <number>9</number>
         </property>
         <property name="bottomMargin">
-         <number>0</number>
+         <number>3</number>
         </property>
         <item>
-         <widget class="QGroupBox" name="groupBox2">
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
+         <widget class="QFrame" name="frame">
+          <property name="frameShape">
+           <enum>QFrame::Box</enum>
           </property>
-          <layout class="QVBoxLayout" name="verticalLayout_17">
-           <property name="spacing">
-            <number>0</number>
-           </property>
+          <property name="frameShadow">
+           <enum>QFrame::Sunken</enum>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout_6">
            <property name="margin">
-            <number>3</number>
+            <number>9</number>
            </property>
            <item>
             <widget class="QSplitter" name="spl_control_inout_rules">
@@ -502,7 +508,7 @@
               <widget class="QWidget" name="layoutWidget3">
                <layout class="QVBoxLayout" name="verticalLayout_16">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>3</number>
                 </property>
                 <property name="leftMargin">
                  <number>0</number>
@@ -524,12 +530,18 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QScrollArea" name="scrollArea">
+                 <widget class="QScrollArea" name="scrollAreaInput">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                    </sizepolicy>
+                  </property>
+                  <property name="frameShape">
+                   <enum>QFrame::Box</enum>
+                  </property>
+                  <property name="frameShadow">
+                   <enum>QFrame::Sunken</enum>
                   </property>
                   <property name="horizontalScrollBarPolicy">
                    <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -545,8 +557,8 @@
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>221</width>
-                     <height>76</height>
+                     <width>248</width>
+                     <height>92</height>
                     </rect>
                    </property>
                    <property name="sizePolicy">
@@ -584,8 +596,6 @@
                      </widget>
                     </item>
                    </layout>
-                   <zorder>inputVariables</zorder>
-                   <zorder>inputVariables</zorder>
                   </widget>
                  </widget>
                 </item>
@@ -594,7 +604,7 @@
               <widget class="QWidget" name="layoutWidget4">
                <layout class="QVBoxLayout" name="verticalLayout_18">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>3</number>
                 </property>
                 <property name="topMargin">
                  <number>0</number>
@@ -619,12 +629,18 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QScrollArea" name="scrollArea_2">
+                 <widget class="QScrollArea" name="scrollAreaOutput">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                    </sizepolicy>
+                  </property>
+                  <property name="frameShape">
+                   <enum>QFrame::Box</enum>
+                  </property>
+                  <property name="frameShadow">
+                   <enum>QFrame::Sunken</enum>
                   </property>
                   <property name="horizontalScrollBarPolicy">
                    <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -640,8 +656,8 @@
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>292</width>
-                     <height>76</height>
+                     <width>247</width>
+                     <height>92</height>
                     </rect>
                    </property>
                    <property name="sizePolicy">
@@ -695,7 +711,7 @@
               <widget class="QWidget" name="verticalLayoutWidget">
                <layout class="QVBoxLayout" name="verticalLayout_5">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>3</number>
                 </property>
                 <item>
                  <widget class="QLabel" name="label_3">
@@ -734,7 +750,7 @@
               <widget class="QWidget" name="verticalLayoutWidget_2">
                <layout class="QVBoxLayout" name="verticalLayout_14">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>3</number>
                 </property>
                 <item>
                  <widget class="QLabel" name="label_5">
